--- a/ext/assets/ripple.css
+++ b/ext/assets/ripple.css
@@ -334,6 +334,12 @@ section.left { left: 0; }
 /* ------------------------------>
     overlay UI */
 
+#overlay-views {
+    position: absolute;
+    width: inherit;
+    height: inherit;
+}
+
 .overlay {
     z-index: 10000;
     width: 100%;
